@@ -8,11 +8,14 @@ import com.server.money_touch.domain.budget.repository.budgetCategory.BudgetCate
 import com.server.money_touch.domain.routine.converter.RoutineConverter;
 import com.server.money_touch.domain.routine.dto.RoutineResponse;
 import com.server.money_touch.domain.routine.entity.Routine;
+import com.server.money_touch.domain.routine.entity.RoutineAmount;
+import com.server.money_touch.domain.routine.repository.routine.RoutineAmountRepository;
 import com.server.money_touch.domain.routine.repository.routine.RoutineRepository;
 import com.server.money_touch.domain.user.entity.User;
 import com.server.money_touch.domain.user.repository.user.UserRepository;
 import com.server.money_touch.global.apiPayload.code.status.ErrorStatus;
 import com.server.money_touch.global.apiPayload.exception.handler.ErrorHandler;
+import com.server.money_touch.global.constants.DefaultCategoryConstants;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
@@ -24,6 +27,7 @@ import org.springframework.validation.annotation.Validated;
 
 import java.time.LocalDate;
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -39,6 +43,7 @@ public class RoutineQueryServiceImpl implements RoutineQueryService {
     private final UserRepository userRepository;
     private final BudgetCategoryRepository budgetCategoryRepository;
     private final BudgetRepository budgetRepository;
+    private final RoutineAmountRepository routineAmountRepository;
 
     // 소비 루틴 존재 여부 검증
     @Override
@@ -57,30 +62,19 @@ public class RoutineQueryServiceImpl implements RoutineQueryService {
         Routine routine = routineRepository.findByIdAndUserId(routineId, userId)
                 .orElseThrow(() -> new ErrorHandler(ErrorStatus.ROUTINE_NOT_FOUND));
 
-        Budget budget = routine.getBudget();
+        // 3. 루틴 금액 정보 조회
+        List<RoutineAmount> routineAmounts = routineAmountRepository.findAllWithRoutineByRoutineId(routineId);
 
-        // 3. 예산-카테고리 목록 조회
-        List<BudgetCategory> budgetCategories = budgetCategoryRepository.findAllWithCategoryByBudgetId(budget.getId());
-
-        // 4. categoryType별로 분류
-        Map<CategoryType, List<BudgetCategory>> groupedByType = budgetCategories.stream()
-                .collect(Collectors.groupingBy(bc -> bc.getConsumptionCategory().getBudgetCategoryType()));
-
-        // 5. CategoryBudgetDetailDTO 변환 (기본 → 커스텀 → 루틴 순서 유지)
-        List<RoutineResponse.CategoryBudgetDetailDTO> categoryBudgetList = Stream.of(
-                        CategoryType.DEFAULT,
-                        CategoryType.CUSTOM,
-                        CategoryType.ROUTINE_CATEGORY
-                )
-                .flatMap(type -> groupedByType.getOrDefault(type, Collections.emptyList()).stream())
-                .map(bc -> RoutineResponse.CategoryBudgetDetailDTO.builder()
-                        .categoryName(bc.getConsumptionCategory().getBudgetCategoryName())
-                        .amount(bc.getBudgetCategoryMoney())
+        // 4. 카테고리 정보 DTO로 변환
+        List<RoutineResponse.CategoryBudgetDetailDTO> categoryBudgetList = routineAmounts.stream()
+                .map(ra -> RoutineResponse.CategoryBudgetDetailDTO.builder()
+                        .categoryName(ra.getCategoryName())
+                        .amount(ra.getAmount())
                         .build())
                 .collect(Collectors.toList());
 
         log.info("내 소비 루틴 상세 조회 완료 - userId: {}, routeIneId: {}", userId, routineId);
-        return RoutineConverter.toRoutineDetailDTO(budget.getBudgetTotal(), routine.getRoutineName(), categoryBudgetList);
+        return RoutineConverter.toRoutineDetailDTO(routine.getRoutineTotalAmount(), routine.getRoutineName(), categoryBudgetList);
     }
 
     // 내 소비 루틴 목록 조회 (커서 기반 무한스크롤)
@@ -116,23 +110,26 @@ public class RoutineQueryServiceImpl implements RoutineQueryService {
     }
 
     // 타인 소비 루틴 상세 조회
+    // 타인 소비 루틴 상세 조회
     @Override
     public RoutineResponse.RoutineListDetailDTO getOtherRoutineDetail(Long userId, Long routineId) {
+        // 1. 루틴 조회
         Routine routine = routineRepository.findById(routineId)
                 .orElseThrow(() -> new ErrorHandler(ErrorStatus.ROUTINE_NOT_FOUND));
 
-        Budget routineBudget = routine.getBudget();
-        List<BudgetCategory> budgetCategories = budgetCategoryRepository.findAllWithCategoryByBudgetId(routineBudget.getId());
+        // 2. 루틴 금액 정보 조회
+        List<RoutineAmount> routineAmounts = routineAmountRepository.findAllWithRoutineByRoutineId(routineId);
 
-        // 금액이 0원인 카테고리 제외
-        List<RoutineResponse.CategoryBudgetDetailDTO> categoryBudgetList = budgetCategories.stream()
-                .filter(bc -> bc.getBudgetCategoryMoney() != null && bc.getBudgetCategoryMoney() > 0)
-                .map(bc -> RoutineResponse.CategoryBudgetDetailDTO.builder()
-                        .categoryName(bc.getConsumptionCategory().getBudgetCategoryName())
-                        .amount(bc.getBudgetCategoryMoney())
+        // 3. 금액이 0원 초과인 항목만 필터링 및 DTO 변환
+        List<RoutineResponse.CategoryBudgetDetailDTO> categoryBudgetList = routineAmounts.stream()
+                .filter(ra -> ra.getAmount() != null && ra.getAmount() > 0)
+                .map(ra -> RoutineResponse.CategoryBudgetDetailDTO.builder()
+                        .categoryName(ra.getCategoryName())
+                        .amount(ra.getAmount())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
+        // 4. 사용자 예산 정보로 적용 가능 여부 판단
         String createdMonth = LocalDate.now().withDayOfMonth(1).toString().substring(0, 7);
         Optional<Budget> myBudgetOpt = budgetRepository.findByUserIdAndCreatedMonth(userId, createdMonth);
 
@@ -144,7 +141,7 @@ public class RoutineQueryServiceImpl implements RoutineQueryService {
         }
 
         return RoutineResponse.RoutineListDetailDTO.builder()
-                .totalBudget(routineBudget.getBudgetTotal())
+                .totalBudget(routine.getRoutineTotalAmount())
                 .routineName(routine.getRoutineName())
                 .categoryBudgetList(categoryBudgetList)
                 .canApply(canApply)
@@ -158,4 +155,88 @@ public class RoutineQueryServiceImpl implements RoutineQueryService {
         Slice<RoutineResponse.RoutineListDTO> slice = routineRepository.searchRoutinesByKeyword(keyword, cursorId, pageable);
         return RoutineConverter.toAllRoutineListDTO(slice.getContent(), slice);
     }
+
+    // 타인의 소비 루틴을 내 예산에 반영 시 미리보기
+    @Override
+    public RoutineResponse.ApplyRoutineInfoDTO getRoutineApplyInfo(Long userId, Long routineId) {
+        // 1. 사용자 조회
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ErrorHandler(ErrorStatus.USER_NOT_FOUND));
+
+        // 2. 소비 루틴 조회 (자신의 루틴은 허용하지 않음)
+        Routine routine = routineRepository.findById(routineId)
+                .orElseThrow(() -> new ErrorHandler(ErrorStatus.ROUTINE_NOT_FOUND));
+
+        if (routine.getUser().getId().equals(userId)) {
+            throw new ErrorHandler(ErrorStatus.ROUTINE_PREVIEW_NOT_ALLOWED);
+        }
+
+        // 3. 해당 루틴의 예산 생성 월 기준으로 내 예산 조회
+        Budget myBudget = budgetRepository.findByUserAndCreatedMonth(user, routine.getBudget().getCreatedMonth())
+                .orElseThrow(() -> new ErrorHandler(ErrorStatus.BUDGET_NOT_FOUND));
+
+        if (Boolean.TRUE.equals(myBudget.getIsFromRoutine())) {
+            throw new ErrorHandler(ErrorStatus.ROUTINE_ALREADY_APPLIED);
+        }
+
+        // 4. 내 예산의 소비 카테고리 로드
+        List<BudgetCategory> myCategories = budgetCategoryRepository.findByBudgetWithConsumptionCategory(myBudget);
+        Map<String, BudgetCategory> myCategoryMap = myCategories.stream()
+                .collect(Collectors.toMap(
+                        bc -> bc.getConsumptionCategory().getBudgetCategoryName(),
+                        Function.identity()
+                ));
+
+        // 5. 루틴 금액 정보 조회
+        List<RoutineAmount> routineAmounts = routineAmountRepository.findAllWithRoutineByRoutineId(routineId);
+        Map<String, Integer> routineAmountMap = routineAmounts.stream()
+                .collect(Collectors.toMap(RoutineAmount::getCategoryName, RoutineAmount::getAmount));
+
+        // 6. Default 카테고리 처리
+        Set<String> defaultNames = new HashSet<>(DefaultCategoryConstants.DEFAULT_CATEGORY_NAMES);
+
+        List<RoutineResponse.ApplyCategoryBudgetDTO> defaultCategoryBudgets =
+                DefaultCategoryConstants.DEFAULT_CATEGORY_NAMES.stream()
+                        .map(name -> {
+                            int amount = routineAmountMap.getOrDefault(name, 0);
+                            return RoutineConverter.toCategoryDTO(name, amount, CategoryType.DEFAULT);
+                        })
+                        .collect(Collectors.toList());
+
+        // 7. 루틴 기반 ROUTINE_CATEGORY 구성 (CUSTOM과 이름이 겹치는 항목 포함)
+        Set<String> routineCategoryNames = new HashSet<>();
+        List<RoutineResponse.ApplyCategoryBudgetDTO> routineCategoryBudgets = routineAmounts.stream()
+                .filter(ra -> !defaultNames.contains(ra.getCategoryName()))
+                .map(ra -> {
+                    String name = ra.getCategoryName();
+                    int amount = ra.getAmount();
+                    routineCategoryNames.add(name);
+                    return RoutineConverter.toCategoryDTO(name, amount, CategoryType.ROUTINE_CATEGORY);
+                })
+                .collect(Collectors.toList());
+
+        // 8. 내 예산의 CUSTOM 항목 중 루틴에 포함되지 않은 항목만 CUSTOM으로 유지
+        List<RoutineResponse.ApplyCategoryBudgetDTO> customCategoryBudgets = myCategories.stream()
+                .filter(mc -> {
+                    String name = mc.getConsumptionCategory().getBudgetCategoryName();
+                    return mc.getConsumptionCategory().getBudgetCategoryType() == CategoryType.CUSTOM &&
+                            !routineCategoryNames.contains(name);
+                })
+                .map(mc -> RoutineConverter.toCategoryDTO(
+                        mc.getConsumptionCategory().getBudgetCategoryName(),
+                        0,
+                        CategoryType.CUSTOM)
+                )
+                .collect(Collectors.toList());
+
+        log.info("소비 루틴 예산 반영 미리보기 완료 - userId: {}, routineId: {}", userId, routineId);
+
+        return RoutineConverter.toApplyRoutineInfoDTO(
+                routine.getRoutineTotalAmount(),
+                defaultCategoryBudgets,
+                customCategoryBudgets,
+                routineCategoryBudgets
+        );
+    }
+
 }
